[build-system]
requires = ["setuptools", "wheel"]

[tool.black]
line-length = 100
target-version = ["py37"]

[tool.isort]
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = "hypercorn, tests"
known_third_party = "_pytest, aioquic, cryptography, h11, h2, pytest, trio, typing_extensions, wsproto"
line_length = 100
multi_line_output = 3
no_lines_before = "LOCALFOLDER"
order_by_type = false
reverse_relative = true

[tool.mypy]
allow_redefinition = true
disallow_subclassing_any = true
disallow_untyped_defs = true
strict_equality = true
strict_optional = false
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module =["aioquic.*", "aioredis.*", "cryptography.*", "h11.*", "h2.*", "priority.*", "_pytest.*", "pytest.*", "trio.*", "uvloop.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--no-cov-on-fail --showlocals --strict"
testpaths = ["tests"]
